--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -46,138 +47,138 @@
         <section class="section">
             <div class="projects container">
                 <h1 class="visually-hidden">Buttons list</h1>
-                <ul class="buttons-filter list">
-                    <li><button class="button-filter" type="button">Усі</button> </li>
-                    <li><button class="button-filter" type="button">Веб-сайти</button> </li>
-                    <li><button class="button-filter" type="button">Додатки</button> </li>
-                    <li><button class="button-filter" type="button">Дизайн</button> </li>
-                    <li><button class="button-filter" type="button">Макет</button> </li>
+                <ul class="projects__buttons-filter list">
+                    <li><button class="projects__buttons-filter-item" type="button">Усі</button> </li>
+                    <li><button class="projects__buttons-filter-item" type="button">Веб-сайти</button> </li>
+                    <li><button class="projects__buttons-filter-item" type="button">Додатки</button> </li>
+                    <li><button class="projects__buttons-filter-item" type="button">Дизайн</button> </li>
+                    <li><button class="projects__buttons-filter-item" type="button">Макет</button> </li>
                 </ul>
                 <h2 class="visually-hidden">Проекти</h2>
-                <ul class="projects list">
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                <ul class="projects__list list">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/site.jpg" alt="зображення веб-сайта" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Технокряк</h3>
-                                <p class="project-text">Веб-сайт</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Технокряк</h3>
+                                <p class="projects__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/poster.jpg" alt="постер" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
-                                <p class="project-text">Дизайн</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Постер New Orlean vs Golden Star</h3>
+                                <p class="projects__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/restaurant.jpg" alt="банер ресторана" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Ресторан Seafood</h3>
-                                <p class="project-text">Додаток</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Ресторан Seafood</h3>
+                                <p class="projects__text">Додаток</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/prime.jpg" alt="наушники" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Проект Prime</h3>
-                                <p class="project-text">Маркетинг</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Проект Prime</h3>
+                                <p class="projects__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/boxes.jpg" alt="коробки" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Проект Boxes</h3>
-                                <p class="project-text">Додаток</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Проект Boxes</h3>
+                                <p class="projects__text">Додаток</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/screen.jpg" alt="монитор" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Inspiration has no Borders</h3>
-                                <p class="project-text">Веб-сайт</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Inspiration has no Borders</h3>
+                                <p class="projects__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/book.jpg" alt="книга" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Видання Limited Edition</h3>
-                                <p class="project-text">Дизайн</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Видання Limited Edition</h3>
+                                <p class="projects__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/label.jpg" alt="этикетка" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Проект LAB</h3>
-                                <p class="project-text">Маркетинг</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Проект LAB</h3>
+                                <p class="projects__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
-                        <a href="" class="projects-link link">
-                            <div class="projects-wrapper">
+                    <li>
+                        <a href="" class="projects__link link">
+                            <div class="projects__wrapper">
                                 <img src="./images/notebook.jpg" alt="ноутбук" width="370">
-                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
-                                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <p class="projects__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу. </p>
                             </div>
-                            <div class="project-description">
-                                <h3 class="project-title">Growing Business</h3>
-                                <p class="project-text">Додаток</p>
+                            <div class="project__description">
+                                <h3 class="projects__title">Growing Business</h3>
+                                <p class="projects__text">Додаток</p>
                             </div>
                         </a>
                     </li>
