--- a/portfolio.html
+++ b/portfolio.html
@@ -189,64 +189,64 @@
     <footer>
         <div class="footer">
             <div class="container">
-                <div class="left">
-                    <a class="logo-fotter link" href="./index.html">Web<span>Studio</span></a>
+                <div class="footer__left">
+                    <a class="footer__logo link" href="./index.html">Web<span>Studio</span></a>
                     <address class="address">
-                        <ul class="footer-adress list">
-                            <li class="footer-location-item"><a class="footer-location link"
-                                    href="https://goo.gl/maps/E31LjMS4C6WuwfjZA" target="_blank"
-                                    rel="noopener nofollow noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
-                            <li class="footer-contact-item"><a class="footer-contact link"
+                        <ul class="adress_list list">
+                            <li class=""><a class="address__location link" href="https://goo.gl/maps/E31LjMS4C6WuwfjZA"
+                                    target="_blank" rel="noopener nofollow noreferrer">м. Київ, пр-т Лесі Українки,
+                                    26</a></li>
+                            <li class="address__item"><a class="address__contact link"
                                     href="mailto:info@example.com">info@example.com</a></li>
-                            <li class="footer-contact item"><a class="footer-contact link" href="tel:+380961111111">+38
-                                    099 111 11 11</a></li>
+                            <li class=""><a class="address__contact link" href="tel:+380961111111">+38 099 111 11 11</a>
+                            </li>
                         </ul>
                     </address>
                 </div>
-                <div class="right">
-                    <p class="fotter-right-title">приєднуйтесь</p>
-                    <ul class="team-socialmedia-list list">
-                        <li class="team-socialmedia-list-item fotter">
-                            <a class="team-socialmedia-link link">
-                                <svg lang="en" aria-level="icon instagram" class="footer-socialmedia-icon" width="20"
-                                    height="20">
+                <div class="footer__right">
+                    <p class="footer__title">приєднуйтесь</p>
+                    <ul class="socialmedia-list list">
+                        <li class="socialmedia-list__item footer-page">
+                            <a class="socialmedia__link link">
+                                <svg lang="en" aria-level="icon instagram" class="socialmedia-list__footer-icon"
+                                    width="20" height="20">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="team-socialmedia-list-item fotter">
-                            <a class="team-socialmedia-link link">
-                                <svg lang="en" aria-level="icon twitter" class="footer-socialmedia-icon" width="20"
-                                    height="20">
+                        <li class="socialmedia-list__item footer-page">
+                            <a class="socialmedia__link link">
+                                <svg lang="en" aria-level="icon twitter" class="socialmedia-list__footer-icon"
+                                    width="20" height="20">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="team-socialmedia-list-item fotter">
-                            <a class="team-socialmedia-link link">
-                                <svg lang="en" aria-level="icon facebook" class="footer-socialmedia-icon" width="20"
-                                    height="20">
+                        <li class="socialmedia-list__item footer-page">
+                            <a class="socialmedia__link link">
+                                <svg lang="en" aria-level="icon facebook" class="socialmedia-list__footer-icon"
+                                    width="20" height="20">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="team-socialmedia-list-item fotter">
-                            <a class="team-socialmedia-link link">
-                                <svg lang="en" aria-level="icon linkedin" class="footer-socialmedia-icon" width="20"
-                                    height="20">
+                        <li class="socialmedia-list__item footer-page">
+                            <a class="socialmedia__link link">
+                                <svg lang="en" aria-level="icon linkedin" class="socialmedia-list__footer-icon"
+                                    width="20" height="20">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="footer-form-wrapper">
-                    <p class="form-title">Підпишіться на розсилку</p>
-                    <form class="footer-form">
-                        <label name="user_email" for="">
-                            <input type="email" placeholder="E-mail" class="form-email">
+                <div class="footer__form-wrapper">
+                    <p class="footer__title">Підпишіться на розсилку</p>
+                    <form class="footer__form">
+                        <label name="user_email">
+                            <input type="email" placeholder="E-mail" class="footer__input">
                         </label>
-                        <button type="submit" class="button">Підписатися <svg class="footer-icon-send" width="24"
+                        <button type="submit" class="button">Підписатися <svg class="footer__icon-send" width="24"
                                 height="24">
                                 <use href="./images/icons.svg#icon-send"></use>
                             </svg>
