--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ur">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" container="IE=edge">
-    <meta name="viewport" container="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -291,42 +291,42 @@
                 <ul class="clients-list list">
                     <li class="clients-item">
                         <a href="clients-item-link">
-                            <svg class="clients-item-logo" width="106" hidth="60">
+                            <svg class="clients-item-logo" width="106" height="60">
                                 <use href="./images/icons.svg#icon-union"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="">
-                            <svg class="clients-item-logo" width="106" hidth="60">
+                            <svg class="clients-item-logo" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="">
-                            <svg class="clients-item-logo" width="106" hidth="60">
+                            <svg class="clients-item-logo" width="106" height="60">
                                 <use href="./images/icons.svg#icon-company"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="">
-                            <svg class="clients-item-logo" width="106" hidth="60">
+                            <svg class="clients-item-logo" width="106" height="60">
                                 <use href="./images/icons.svg#icon-foster"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="">
-                            <svg class="clients-item-logo" width="106" hidth="60">
+                            <svg class="clients-item-logo" width="106" height="60">
                                 <use href="./images/icons.svg#icon-brand"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a href="">
-                            <svg class="clients-item-logo" width="106" hidth="60">
+                            <svg class="clients-item-logo" width="106" height="60">
                                 <use href="./images/icons.svg#icon-tag"></use>
                             </svg>
                         </a>
@@ -335,7 +335,6 @@
             </div>
         </section>
     </main>
-    </div>
     <!-- футер -->
     <footer>
         <div class="footer">
@@ -359,7 +358,7 @@
                     <ul class="socialmedia-list list">
                         <li class="socialmedia-list__item footer-page">
                             <a class="socialmedia__link link">
-                                <svg lang="en" aria-level="icon instagram" class="socialmedia-list__footer-icon"
+                                <svg lang="en" aria-label="icon instagram" class="socialmedia-list__footer-icon"
                                     width="20" height="20">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
@@ -367,7 +366,7 @@
                         </li>
                         <li class="socialmedia-list__item footer-page">
                             <a class="socialmedia__link link">
-                                <svg lang="en" aria-level="icon twitter" class="socialmedia-list__footer-icon"
+                                <svg lang="en" aria-label="icon twitter" class="socialmedia-list__footer-icon"
                                     width="20" height="20">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
@@ -375,7 +374,7 @@
                         </li>
                         <li class="socialmedia-list__item footer-page">
                             <a class="socialmedia__link link">
-                                <svg lang="en" aria-level="icon facebook" class="socialmedia-list__footer-icon"
+                                <svg lang="en" aria-label="icon facebook" class="socialmedia-list__footer-icon"
                                     width="20" height="20">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
@@ -383,7 +382,7 @@
                         </li>
                         <li class="socialmedia-list__item footer-page">
                             <a class="socialmedia__link link">
-                                <svg lang="en" aria-level="icon linkedin" class="socialmedia-list__footer-icon"
+                                <svg lang="en" aria-label="icon linkedin" class="socialmedia-list__footer-icon"
                                     width="20" height="20">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -394,7 +393,7 @@
                 <div class="footer__form-wrapper">
                     <p class="footer__title">Підпишіться на розсилку</p>
                     <form class="footer__form">
-                        <label name="user_email">
+                        <label class="user_email">
                             <input type="email" placeholder="E-mail" class="footer__input">
                         </label>
                         <button type="submit" class="button">Підписатися <svg class="footer__icon-send" width="24"
